--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,3 @@
 PORT=""
 
-PRODUCT_MS_HOST=""
-PRODUCT_MS_PORT=""
-
-ORDER_MS_HOST=""
-ORDER_MS_PORT=""
+NATS_SERVERS="nats://localhost:4222,nats://localhost:4223,nats://localhost:4224"
